# OTA_Upgrade_System

./: .gitignore  Bootloader_OTA_Notes.md  CMakeLists.txt  README.md  RTOSknowledge.md  build_esp32.bat  build_esp32.ps1
App/OTA/Inc/: ota_meta.h  ota_task.h
App/OTA/Src/: ota_meta.c  ota_task.c
App/Sensor/Inc/: sensor_task.h
App/Sensor/Src/: sensor_task.c
App/Test/Inc/: comm_test.h
App/Test/Src/: comm_test.c
Bootloader/: CMakeLists.txt  STM32F103C8Tx_BOOT.ld  main.c  system_boot.c
Core/Inc/: FreeRTOSConfig.h  flash_if.h  iwdg.h  main.h  stm32f1xx_it.h  sys_config.h  usart1.h  usart2.h
Core/Src/: flash_if.c  iwdg.c  main.c  stm32f1xx_it.c  sys_config.c  syscalls.c  system_stm32f1xx.c  usart1.c  usart2.c
Core/Startup/: STM32F103C8Tx_FLASH.ld  stm32f1xx_it.c
ESP_Firmware/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  setup.bat
ESP_Firmware/main/: CMakeLists.txt  ca_cert.c  hello_world_main.c  mqtt_client_task.c  mqtt_client_task.h  mqtt_config.h.example  wifi_config.h.example  wifi_station.c  wifi_station.h
Hardware/Crypto/: sha256.c  sha256.h
Hardware/DHT11/: dht11.c  dht11.h
Hardware/ESP32/: esp32_comm.c  esp32_comm.h
Hardware/W25Qxx/: w25qxx.c  w25qxx.h
Middlewares/FreeRTOS/Inc/: FreeRTOSConfig.h
deploy/mosquitto/: mosquitto_tls.conf
tests/: diag_monitor.py  diag_serial.py  ota_mqtt_sender.py  ota_performance_test.py  ota_sender.py  performance_report.md
